--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
     "next": "15.1.3",
     "react": "^19.0.0",
