--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.9",
+    "framer-motion": "^11.16.0",
     "html2canvas": "^1.4.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.3.5",
+    "react-select": "^5.9.0",
     "uuid": "^11.0.4"
   },
   "devDependencies": {
