--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.16.0",
     "html2canvas": "^1.4.1",
-    "next": "15.1.3",
+    "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
